--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "@vue/cli-service": "^4.5.12",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.0.0-0",
+    "@vue/vue3-jest": "^29.2.6",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.30.0",
     "istanbul-badges-readme": "^1.4.0",
     "typescript": "^5.3.3",
-    "vite": "^2.6.1",
-    "vitepress": "^0.15.6",
-    "vue-jest": "^5.0.0-alpha.10"
+    "vite": "^5.4.6",
+    "vitepress": "^1.5.0"
   },
   "eslintConfig": {
     "root": true,
